analysis.log
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:448:13: warning: variable 'info_compiler' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
  448 | char const* info_compiler = "INFO" ":" "compiler[" COMPILER_ID "]";
      |             ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:448:13: error: invalid case style for variable 'info_compiler' [readability-identifier-naming,-warnings-as-errors]
  448 | char const* info_compiler = "INFO" ":" "compiler[" COMPILER_ID "]";
      |             ^~~~~~~~~~~~~
      |             infoCompiler
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:761:12: error: invalid case style for global constant 'info_version' [readability-identifier-naming,-warnings-as-errors]
  761 | char const info_version[] = {
      |            ^~~~~~~~~~~~
      |            INFO_VERSION
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:810:13: warning: variable 'info_platform' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
  810 | char const* info_platform = "INFO" ":" "platform[" PLATFORM_ID "]";
      |             ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:810:13: error: invalid case style for variable 'info_platform' [readability-identifier-naming,-warnings-as-errors]
  810 | char const* info_platform = "INFO" ":" "platform[" PLATFORM_ID "]";
      |             ^~~~~~~~~~~~~
      |             infoPlatform
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:811:13: warning: variable 'info_arch' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
  811 | char const* info_arch = "INFO" ":" "arch[" ARCHITECTURE_ID "]";
      |             ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:811:13: error: invalid case style for variable 'info_arch' [readability-identifier-naming,-warnings-as-errors]
  811 | char const* info_arch = "INFO" ":" "arch[" ARCHITECTURE_ID "]";
      |             ^~~~~~~~~
      |             infoArch
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:832:13: warning: variable 'info_language_standard_default' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
  832 | const char* info_language_standard_default =
      |             ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:832:13: error: invalid case style for variable 'info_language_standard_default' [readability-identifier-naming,-warnings-as-errors]
  832 | const char* info_language_standard_default =
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             infoLanguageStandardDefault
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:835:13: warning: variable 'info_language_extensions_default' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
  835 | const char* info_language_extensions_default = "INFO" ":" "extensions_default["
      |             ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/cmake-build-debug/CMakeFiles/3.28.3/CompilerIdC/CMakeCCompilerId.c:835:13: error: invalid case style for variable 'info_language_extensions_default' [readability-identifier-naming,-warnings-as-errors]
  835 | const char* info_language_extensions_default = "INFO" ":" "extensions_default["
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             infoLanguageExtensionsDefault
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/src/ftp/main.c:10:14: warning: unused parameter 'argc' [clang-diagnostic-unused-parameter]
   10 | int main(int argc, char* argv[])
      |              ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/src/ftp/main.c:10:26: warning: unused parameter 'argv' [clang-diagnostic-unused-parameter]
   10 | int main(int argc, char* argv[])
      |                          ^
/home/janumaruku/epitech_year2/epitech_projects/MyFTP/src/ftp/main.c:12:9: warning: variable name 'i' is too short, expected at least 3 characters [readability-identifier-length]
   12 |     int i = 0;
      |         ^
